{
  "version": 4,
  "terraform_version": "1.1.7",
  "serial": 54,
  "lineage": "d70f0325-d5e7-c685-49e2-297692fa3ce2",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "http-server",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2022-03-24T02:48:44.907-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/airy-shuttle-339316/global/firewalls/allow-http",
            "log_config": [],
            "name": "allow-http",
            "network": "https://www.googleapis.com/compute/v1/projects/airy-shuttle-339316/global/networks/default",
            "priority": 1000,
            "project": "airy-shuttle-339316",
            "self_link": "https://www.googleapis.com/compute/v1/projects/airy-shuttle-339316/global/firewalls/allow-http",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "http-server"
            ],
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "zeitgeist-ports",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80",
                  "1000-10000"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2022-03-24T02:48:44.899-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/airy-shuttle-339316/global/firewalls/allow-zeitgeist",
            "log_config": [],
            "name": "allow-zeitgeist",
            "network": "https://www.googleapis.com/compute/v1/projects/airy-shuttle-339316/global/networks/default",
            "priority": 1000,
            "project": "airy-shuttle-339316",
            "self_link": "https://www.googleapis.com/compute/v1/projects/airy-shuttle-339316/global/firewalls/allow-zeitgeist",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "zeitgeist-ports"
            ],
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "logging",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2004-focal-v20220308",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/airy-shuttle-339316/zones/us-west4-b/disks/logging-server"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/airy-shuttle-339316/zones/us-west4-b/instances/logging-server",
            "instance_id": "2466382722328789103",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-medium",
            "metadata_fingerprint": "fTQLjASLD0M=",
            "name": "logging-server",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.125.101.106",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/airy-shuttle-339316/global/networks/default",
                "network_ip": "10.182.0.25",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/airy-shuttle-339316/regions/us-west4/subnetworks/default",
                "subnetwork_project": "airy-shuttle-339316"
              }
            ],
            "project": "airy-shuttle-339316",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/airy-shuttle-339316/zones/us-west4-b/instances/logging-server",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "http-server",
              "zeitgeist-ports"
            ],
            "tags_fingerprint": "34fJTQ6e9rk=",
            "zone": "us-west4-b"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "monitoring",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2004-focal-v20220308",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/airy-shuttle-339316/zones/us-west4-b/disks/monitoring-server"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/airy-shuttle-339316/zones/us-west4-b/instances/monitoring-server",
            "instance_id": "5623333759636182117",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-medium",
            "metadata_fingerprint": "fTQLjASLD0M=",
            "name": "monitoring-server",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.125.244.238",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/airy-shuttle-339316/global/networks/default",
                "network_ip": "10.182.0.32",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/airy-shuttle-339316/regions/us-west4/subnetworks/default",
                "subnetwork_project": "airy-shuttle-339316"
              }
            ],
            "project": "airy-shuttle-339316",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/airy-shuttle-339316/zones/us-west4-b/instances/monitoring-server",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "http-server",
              "zeitgeist-ports"
            ],
            "tags_fingerprint": "34fJTQ6e9rk=",
            "zone": "us-west4-b"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "zeitgeist",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2004-focal-v20220308",
                    "size": 50,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/airy-shuttle-339316/zones/us-west4-b/disks/zeitgeist-node"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/airy-shuttle-339316/zones/us-west4-b/instances/zeitgeist-node",
            "instance_id": "1313372011251132997",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-standard-4",
            "metadata_fingerprint": "JKaiKmqtBHw=",
            "metadata_startup_script": "#!/bin/sh\nsudo apt-get update\nsudo snap install docker\nsudo docker pull zeitgeist/zeitgeist-node\nsudo docker run -d zeitgeistpm/zeitgeist-node --dev --tmp",
            "name": "zeitgeist-node",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.125.87.143",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/airy-shuttle-339316/global/networks/default",
                "network_ip": "10.182.0.31",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/airy-shuttle-339316/regions/us-west4/subnetworks/default",
                "subnetwork_project": "airy-shuttle-339316"
              }
            ],
            "project": "airy-shuttle-339316",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/airy-shuttle-339316/zones/us-west4-b/instances/zeitgeist-node",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "http-server",
              "zeitgeist-ports"
            ],
            "tags_fingerprint": "34fJTQ6e9rk=",
            "zone": "us-west4-b"
          }
        }
      ]
    }
  ]
}